# dynamiclayoutsclion

./: CMakeLists.txt  dialog.cpp
